2007-08-13  Brian Warner  <warner@lothar.com>

	* buildbot/changes/changes.py (Change.get_HTML_box): add a tooltip
	that contains the checkin comments when you hover over the entry
	in the 'changes' column of the waterfall. Thanks to Frederic Leroy
	for the patch.

	* buildbot/status/web/waterfall.py (WaterfallStatusResource): improve
	'help' page linkage

	* buildbot/status/web/about.py (AboutBuildbot): add an 'about'
	page with versions of python, buildbot, and twisted
	* buildbot/status/web/baseweb.py (WebStatus.setupUsualPages): same
	* buildbot/status/web/index.html: add links to most pages
	* docs/buildbot.texinfo (Buildbot Web Resources): update docs

	* buildbot/status/web/robots.txt: put a robots.txt in new installs
	which discourages robot access to all large dynamically-generated
	pages. The intention is that the index page and the 'about' page
	are the only ones which should be crawlable.
	* buildbot/scripts/runner.py (Maker.public_html): same
	(createMaster): same
	* setup.py: ship index.html and robots.txt in source distributions

	* buildbot/status/web/waterfall.py: add 'refresh' query arg, to
	activate automatic reloading of the page (using a meta Refresh:
	tag). Closes #69.
	(WaterfallHelp): new page to explain all the nifty query arguments
	you can use on the Waterfall, along with forms to set them for
	you. From this page, you can add filters for builder=, branch=,
	show_events=, as well as turning on reload=.
	(WaterfallStatusResource.buildGrid): new query args: last_time=,
	first_time=, show_time=, num_events= . The old show= is still
	accepted, but the new builder= is preferred. We ignore empty
	branch= arguments, to make the WaterfallHelp form easier to
	implement.
	(WaterfallStatusResource.head): new method to add text to the
	<head> of the page.
	* buildbot/status/web/base.py (HtmlResource.content): use head()
	* buildbot/status/web/baseweb.py (OneLinePerBuild.body): ignore
	empty branch= arguments
	(OneLinePerBuildOneBuilder.body): same
